Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103720

Dragging toolbars across screens with higher scale factors has erratic behavior

    XMLWordPrintable

Details

    • Linux/X11
    • ff83fc759 (dev), 2aef2eb52 (6.5)

    Description

      To reproduce:

      • run attached example
      • put the window on left screen
      • resize the window so that it is on both screens
      • press and drag rightmost toolbar to other screen (make sure to keep it from being dragged out)
      • drag it back to the left screen

      This causes one or both of the toolbars that were on left screen to resize smaller. With specific settings, it seems that it can also start jumping around the screen boundary and cannot be dragged back at all.

      This apparently happens because mapToGlobal() call in QToolBarPrivate::mouseMoveEvent() returns some odd small values so it thinks user tries to move the toolbar on top of the other toolbars and it resizes them.

      Reproduces at least on Ubuntu with 2 monitors and scale factor of 1.5 or higher.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axelspoerl Axel Spoerl
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes